--- a/src/screens/SectionSix/styles.css
+++ b/src/screens/SectionSix/styles.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: "Bebas";
+    src: url("../../fonts/BebasNeue-Regular.ttf");
+  }
+  @font-face {
+    font-family: "Poppins";
+    src: url("../../fonts/Poppins/Poppins-Black.ttf");
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
+  
 .sectionSix {
     justify-content: center;
     display: flex;
@@ -16,7 +33,7 @@
 }
 .itemSix {
     color: #FFF;
-    font-family: "Bebas";
+    font-family: "Bebas Neue", sans-serif;
     font-size: 2.5em;
     font-style: normal;
     font-weight: 400;
@@ -26,7 +43,7 @@
 .titleSectionSix {
     color: #FFF;
     text-shadow: 0px 4px 134px #000;
-    font-family: 'Poppins';
+    font-family: "Poppins", sans-serif;
     font-size: 4.5em;
     font-style: normal;
     font-weight: 500;
@@ -36,7 +53,7 @@
 }
 .subtitleSectionSix {
     color: #FFF;
-    font-family: 'Poppins';
+    font-family: "Poppins-Regular", sans-serif;
     font-size: 1em;
     font-style: normal;
     font-weight: 400;
