--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,3 +1,19 @@
+@font-face {
+    font-family: "Bebas";
+    src: url("../../fonts/BebasNeue-Regular.ttf");
+  }
+  @font-face {
+    font-family: "Poppins";
+    src: url("../../fonts/Poppins/Poppins-Black.ttf");
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
 .containerFooter {
     display: flex;
     align-items: center;
@@ -15,7 +31,7 @@
 }
 .titleSlogan {
     color: #FFF;
-    font-family: 'Poppins';
+    font-family: "Poppins", sans-serif;
     font-size: 5em;
     font-style: normal;
     font-weight: 500;
@@ -55,7 +71,7 @@
 }
 .titleFooter {
     color: #FFF;
-    font-family: "Bebas";
+    font-family: "Bebas Neue", sans-serif;
     font-size: 50px;
     font-style: normal;
     font-weight: 400;
