--- a/src/components/HeroText/styles.css
+++ b/src/components/HeroText/styles.css
@@ -2,7 +2,18 @@
     font-family: "Bebas";
     src: url("../../fonts/BebasNeue-Regular.ttf");
   }
-
+  @font-face {
+    font-family: "Poppins";
+    src: url("../../fonts/Poppins/Poppins-Black.ttf");
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
 
 .containerHero {
     display: flex;
@@ -16,7 +27,7 @@
     margin: 0px;
     width: 70%;
     text-shadow: 0px 4px 134px #000;
-    font-family: "Bebas";
+    font-family: "Bebas Neue", sans-serif;
     font-size: 6em;
     font-style: normal;
     font-weight: 400;
@@ -24,10 +35,10 @@
 .subtitleHero {
     color: #FFF;
     text-align: center;
-    font-family: 'Poppins';
+    font-family: "Poppins", sans-serif;
     font-size: 1.3em;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     margin: 0px 0px 50px 0px;
 }
 .container {
@@ -66,7 +77,7 @@
     .subtitleHero {
         color: #FFF;
         text-align: center;
-        font-family: 'Poppins';
+        font-family: "Poppins", sans-serif;
         font-size: 1.1em;
         font-weight: 400;
         width: 90%;
