--- a/src/components/TextMove/styles.css
+++ b/src/components/TextMove/styles.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: "Bebas";
+    src: url("../../fonts/BebasNeue-Regular.ttf");
+  }
 .textMoveContainer {
     overflow: hidden;
     white-space: nowrap;
@@ -16,7 +20,7 @@
 .textMove {
     color: #292929;
     text-align: center;
-    font-family: "Bebas";
+    font-family: "Bebas Neue", sans-serif;
     font-size: 115px;
     font-style: normal;
     font-weight: 400;
