--- a/src/components/buttonComponent/styles.css
+++ b/src/components/buttonComponent/styles.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: "Poppins";
+    src: url("../../fonts/Poppins/Poppins-Black.ttf");
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
+
+
 .containerButtonComponent {
     width: auto;
     display: flex;
@@ -27,9 +41,9 @@
 .textButton {
     color: #FFF;
     text-align: center;
-    font-family: 'Poppins';
+    font-family: "Poppins", sans-serif;
     font-size: 1.3em;
-    font-weight: 400;
+    font-weight: 500;
     margin: 0px;
 }
 .textButton:hover {
