--- a/src/components/buttonFour/styles.css
+++ b/src/components/buttonFour/styles.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: "Poppins";
+    src: url("../../fonts/Poppins/Poppins-Black.ttf");
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
+
 .containerButtonFour {
     width: auto;
     display: flex;
@@ -27,7 +40,7 @@
 .textButtonFour {
     color: #FFF;
     text-align: start;
-    font-family: 'Poppins';
+    font-family: "Poppins-Regular", sans-serif;
     font-size: 1.3em;
     font-weight: 400;
     margin: 0px;
