--- a/src/screens/SectionFour/styles.css
+++ b/src/screens/SectionFour/styles.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("../../fonts/Poppins/Poppins-Black.ttf");
+  src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+  src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+  src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+  src: url("../../fonts/Poppins/Poppins-Light.ttf");
+  src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+  src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+  src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+  src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+}
+
 .sectionFour {
   justify-content: center;
   display: flex;
@@ -30,7 +43,7 @@
 .titleFour {
   color: #FFF;
   text-shadow: 0px 4px 184px #000, 0px 4px 134px #000;
-  font-family: 'Poppins';
+  font-family: "Poppins", sans-serif;
   font-size: 2.3em;
   font-style: normal;
   font-weight: 500;
