--- a/src/screens/SectionThree/styles.css
+++ b/src/screens/SectionThree/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Bebas";
+    src: url("../../fonts/BebasNeue-Regular.ttf");
+  }
+  
 .containerSection3 {
     display: flex;
     flex-direction: column;
@@ -9,7 +14,7 @@
     color: #FFF;
     text-align: center;
     text-shadow: 0px 4px 134px #000;
-    font-family: "Bebas";
+    font-family: "Bebas Neue", sans-serif;
     font-size: 5em;
     font-style: normal;
     font-weight: 400;
