--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: "Poppins";
+    src: url("../../fonts/Poppins/Poppins-Black.ttf");
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
 
 .containerSectionTwo {
     display: flex;
@@ -15,7 +27,7 @@
 .titleSectionTwo {
     color:#FFF;
     text-align: center;
-    font-family: 'Poppins';
+    font-family: "Poppins", sans-serif;
     font-size: 4.5em;
     font-style: normal;
     font-weight: 600;
@@ -116,7 +128,7 @@
 .textPill {
     color: #FFF;
     text-align: center;
-    font-family: 'Poppins';
+    font-family: "Poppins-Regular", sans-serif;
     font-size: 1.2em;
     font-weight: 400;
     padding: 0px 20px;
