--- a/src/screens/Turist/styles.css
+++ b/src/screens/Turist/styles.css
@@ -1,4 +1,39 @@
+@font-face {
+    font-family: "Poppins";
+    src: url("../../fonts/Poppins/Poppins-Black.ttf");
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  }
 .containerTurist {
     position: relative;
     text-align: center;
+}
+
+.light {
+    border-radius: 100px;
+    position: absolute;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    background: #62FEE2;
+    filter: blur(100px);
+    box-shadow: 0px 0px 133.459px 0px #62FEE2, 0px 0px 66.73px 0px #62FEE2, 0px 0px 19.066px 0px #62FEE2, 0px 0px 9.533px 0px #62FEE2;
+}
+
+.light2 {
+    border-radius: 100px;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 150px;
+    height: 150px;
+    background: #62FEE2;
+    filter: blur(100px);
+    box-shadow: 0px 0px 133.459px 0px #62FEE2, 0px 0px 66.73px 0px #62FEE2, 0px 0px 19.066px 0px #62FEE2, 0px 0px 9.533px 0px #62FEE2;
 }
