--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 body {
   padding: 0px;
   margin: 0px;
-  background-color: #1E1E1E;
+  background-color: #111;
   fill: rgba(255, 255, 255, 0.01);
 }
 
