--- a/src/screens/Turist/TuristThree/styles.css
+++ b/src/screens/Turist/TuristThree/styles.css
@@ -18,10 +18,15 @@
     width: 100%;
     flex-direction: column;
 }
+.containerCardTurOne {
+    width: 90%;
+}
 .titleTuristThree {
     color: #FFF;
     text-align: center;
     font-family: "Poppins-Light", sans-serif;
+    text-shadow: 0px 4px 100px #000, 0px 4px 100px #000;
+    z-index: 90;
     font-size: 3.5em;
     margin: 0px;
     font-weight: 600;
