img funcionalidades principales

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -142,3 +142,9 @@
         top: 100px;
     }
 }
+
+@media (min-width: 769px) and (max-width: 992px) {
+    .footerOrder { 
+        top: 150px;
+    }
+}
