--- a/src/screens/SectionFour/styles.css
+++ b/src/screens/SectionFour/styles.css
@@ -21,7 +21,9 @@
   align-items: center;
   gap: 3rem;
 }
-
+.imgGroup {
+  width: 100%;
+}
 
 .cardFour {
   width: 60%;
@@ -70,7 +72,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: bisque;
   height: 500px;
 }
 .moveImage {
@@ -118,6 +119,52 @@
   .sectionFour {
     align-items: center;
     flex-direction: column;
+    height: auto;
+  }
+  .cardFour {
+    margin: 0px;
+    padding: 30px 20px;
+    width: 80%;
+  }
+  .titleFour {
+    font-size: 3em;
+  }
+  .moveImage {
+    width: 90%;
+  }
+  .containerBtnFour {
+    display: flex;
+    gap: 1rem;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-x: auto; 
+    white-space: nowrap;
+  }
+  .containerBtnFour button {
+    flex: 0 0 auto; 
+  }
+  .containerMoveImageFour {
+    margin-right: 0px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  .pixImage {
+    display: none;
+  }
+  .sectionFour {
+    align-items: center;
+    flex-direction: column;
+    height: auto;
+  }
+  .moveImage {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
   }
   .cardFour {
     margin: 0px;
