--- a/src/components/buttonComponent/styles.css
+++ b/src/components/buttonComponent/styles.css
@@ -11,34 +11,18 @@
     src: url("../../fonts/Poppins/Poppins-Thin.ttf");
   }
 
-
-.containerButtonComponent {
-    width: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 .buttonStyle {
-    background-color: #ffffff5c;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
-    width: 100%;
-    height: 50px;
-    border-radius: 0px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    cursor: pointer;
-    border: 2px solid transparent; 
-    border-image: linear-gradient(to right, hsl(0, 0%, 60%), hsl(0, 0%, 60%));
-    border-image-slice: 1;
+    background:
+    linear-gradient(hwb(0 48% 52% / 0.60), hwb(0 48% 52% / 0.60)) padding-box,
+    linear-gradient(40deg, rgba(255, 255, 255, 0.36),  rgba(255, 255, 255, 0.36)) border-box;
     padding: 20px;
-}
-.buttonStyle:hover {
-    border-image: linear-gradient(to right, hsl(0, 0%, 60%), hsl(173, 100%, 60%));
-    border-image-slice: 1;
-}
+    border: 2px solid transparent;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    border-radius: 10px;
+    display: inline-block;
+    backdrop-filter: blur(5px);
+    width: 333px;
 
-.textButton {
     color: #FFF;
     text-align: center;
     font-family: "Poppins", sans-serif;
@@ -46,15 +30,69 @@
     font-weight: 500;
     margin: 0px;
 }
-.textButton:hover {
+.buttonStyle:hover {
+    background:
+    linear-gradient(hwb(0 48% 52%), hwb(0 48% 52%)) padding-box,
+    linear-gradient(40deg, rgba(255, 255, 255, 0.36),  rgba(0, 255, 225, 0.6)) border-box;
+    padding: 20px;
+    border: 2px solid transparent;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    border-radius: 10px;
+    display: inline-block;
+    backdrop-filter: blur(5px);
+
     color: #00FFE1;
 }
 
+
+
+
 @media (min-width: 360px) and (max-width: 576px){
     .buttonStyle {
-        width: 100%;
-    }
-    .textButton {
+        width: 249px;
+        height: 43px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         font-size: 1em;
+    }
+    .buttonStyle:hover {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 577px)  {
+    .buttonStyle {
+        width: 250px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1em;
+    }
+    .buttonStyle:hover {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}   
+
+
+
+@media (min-width: 1200px) {
+    .buttonStyle {
+        width: 333px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.3em;
+    }
+    .buttonStyle:hover {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
