--- a/src/screens/SectionOne/styles.css
+++ b/src/screens/SectionOne/styles.css
@@ -21,7 +21,7 @@
 
 
 
-@media (min-width: 360px) and (max-width: 576px) {
+@media (min-width: 360px) {
     .containerSectionOne {
         height: auto;
         width: 100%;
@@ -31,19 +31,15 @@
         padding: 30px 0px;
     }
 }
-@media (min-width: 577px) and (max-width: 768px) {
-    .containerSectionOne {
-        height: auto;
-        width: 100%;
-    }
+@media (min-width: 577px) {
     .titleSectionOne {
         font-size: 4em;
         padding: 30px 0px;
     }
 }
 
-@media (min-width: 993px) and (max-width: 1200px) {
-    .containerSectionOne {
-        height: auto;
+@media (min-width: 993px) {
+    .titleSectionOne {
+        font-size: 5em;
     }
 }
