--- a/src/screens/SectionSeven/styles.css
+++ b/src/screens/SectionSeven/styles.css
@@ -96,6 +96,7 @@
         font-size: .7em;
         font-weight: 400;
         width: 80%;
+        font-family: "Poppins-Regular", sans-serif;
     }
     .containerSecSeven {
         justify-content: center;
@@ -114,6 +115,7 @@
         font-size: .7em;
         font-weight: 400;
         width: 80%;
+        font-family: "Poppins-Regular", sans-serif;
     }
     .containerSecSeven {
         justify-content: center;
@@ -129,9 +131,10 @@
         width: 90%;
     }
     .question p {
-        font-size: .7em;
+        font-size: 1em;
         font-weight: 400;
         width: 80%;
+        font-family: "Poppins-Regular", sans-serif;
     }
     .containerSecSeven {
         justify-content: center;
