--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -49,18 +49,32 @@
 
 .containerPill {
     border-radius: 160px;
-    border: 3px solid white;
+    border: 2px solid white;
     width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    padding: 10px 30px;
     cursor: pointer;
     background-color: #111111; 
     transition: background-color 0.3s; 
     animation: float 3s ease-in-out infinite;
+
+    color: #FFF;
+    text-align: center;
+    font-family: "Poppins-Regular", sans-serif;
+    font-size: 1em;
+    font-weight: 400;
 }
 
-
-.containerPill::before {
-    background-color: #62FEE2;
+.containerPill:hover {
+    color: #62FEE2;
 }
+.containerPill:hover {
+    border: 2px solid #62FEE2;
+}
+
 
 .containerPills {
     display: flex;
@@ -68,7 +82,6 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-
 }
 
 
@@ -77,8 +90,6 @@
     50% { transform: translateY(-10px)}
     100% { transform: translateY(0) }
 }
-
-
 
 
 .containerPillCero {
@@ -120,34 +131,23 @@
     animation-duration: 6s; 
 }
 
-.containerPill:hover {
-    border: 3px solid #62FEE2;
-}
-
-.textPill:hover {
-    color: #62FEE2;
-}
-.textPill {
-    color: #FFF;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 1.2em;
-    font-weight: 400;
-    padding: 0px 20px;
-}
 
 
-@media (min-width: 360px) and (max-width: 576px) {
+
+
+
+
+@media (min-width: 360px)  {
     .titleSectionTwo {
-        width: 80%;
+        width: 70%;
         font-size: 2.5em;
+        font-family: "Poppins", sans-serif;
     }
     .containerPill {
         border: 1px solid white;
+        font-size: .8em;
     }
-    .textPill {
-        font-size: 1em;
-    }
+
     .pillsRow {
         display: flex;
         flex-direction: row;
@@ -159,7 +159,7 @@
         height: 300px;
     }
 }
-@media (min-width: 577px) and (max-width: 768px) {
+@media (min-width: 577px)  {
     .titleSectionTwo {
         width: 80%;
         font-size: 4em;
@@ -167,23 +167,10 @@
     .containerPill {
         border: 2px solid white;
     }
-    .textPill {
-        font-size: 1em;
-    }
-    .pillsRow {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-        overflow: hidden;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        height: 300px;
-    }
 }
-@media (min-width: 769px) and (max-width: 992px) {
+@media (min-width: 769px){
     .titleSectionTwo {
-        width: 90%;
+        width: 60%;
     }
     .pillsRow {
         overflow: hidden;
@@ -191,8 +178,13 @@
         height: 400px;
     }
 }
-@media (min-width: 993px) and (max-width: 1200px) {
+@media (min-width: 992px) {
+    .containerPill {
+        font-size: 1em;
+    }
     .titleSectionTwo {
-        width: 90%;
+        font-family: "Poppins", sans-serif;
+        font-size: 5em;
+
     }
 }
