--- a/src/components/TextMove/styles.css
+++ b/src/components/TextMove/styles.css
@@ -10,6 +10,7 @@
     display: flex;
     height: 50vh;
     align-items: center;
+    margin-top: 50px;
 }
 
 .textMoveWrapper {
@@ -39,19 +40,20 @@
     }
 }
 
-
-@media (min-width: 360px){
-    .textMoveContainer {
-        height: 30vh;
+@media (min-width: 360px) {
+    .textMove {
+        font-size: 3em;
+        margin: 50px 0px;
     }
+    .textMoveContainer {
+        margin: 0px;
+        height: auto;
+    }
+}
+
+@media (min-width: 992px) {
     .textMove {
         font-size: 4em;
     }
 }
 
-
-@media (min-width: 993px){
-    .textMove {
-        font-size: 5em;
-    }
-}
