--- a/src/screens/SectionOne/styles.css
+++ b/src/screens/SectionOne/styles.css
@@ -5,11 +5,13 @@
 .containerSectionOne {
   display: flex;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  justify-content: flex-start;
+  height: auto;
+  width: 100%;
   flex-direction: column;
   position: relative;
-  overflow: hidden;
+  margin-top: 100px;
+  /* overflow: hidden; */
 }
 .titleSectionOne {
   color: white;
@@ -29,43 +31,26 @@
   background-size: 90%;
   background-clip: text;
   color: transparent;
-  transition: background-position 100ms ease-in-out;
+  transition: background-position 300ms ease-in-out;
 }
 
 .sectionWrapper {
   position: relative;
-  height: 80vh;
-  width: 90%;
-}
-
-.cardWrapper {
-  position: absolute;
-  top: 0;
+  flex-direction: column;
+  height: auto;
   width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 @media (min-width: 360px) {
-  .containerSectionOne {
-    height: auto;
-    width: 100%;
-  }
   .titleSectionOne {
-    font-size: 2em;
-    padding: 30px 0px;
+    font-size: 3em;
   }
 }
-@media (min-width: 577px) {
-  .titleSectionOne {
-    font-size: 4em;
-    padding: 30px 0px;
-  }
-}
-
-@media (min-width: 993px) {
-  .titleSectionOne {
-    font-size: 7em;
-  }
-}
+ @media (min-width: 576px) {
+    .titleSectionOne {
+      font-size: 5em;
+    }
+ }
