--- a/src/components/Card/CardGrag/styles.css
+++ b/src/components/Card/CardGrag/styles.css
@@ -19,6 +19,7 @@
     font-weight: 400;
     margin: 0px;
     text-indent: 0px;    
+    text-align: start;
     text-wrap: wrap;
 }
 .titleCardDrag {
@@ -92,6 +93,7 @@
     .subtitleCardDrag {
         font-family: "Poppins-Regular", sans-serif;
         font-size: .9em;
+        text-align: start;
     }
     .titleCardDrag {
         padding-bottom: 10px;
@@ -114,6 +116,7 @@
     }
     .subtitleCardDrag {
         font-size: 1em;
+        text-align: start;
     }
     .itemDrag {
         width: 350px;
