--- a/src/components/buttonComponent/styles.css
+++ b/src/components/buttonComponent/styles.css
@@ -22,6 +22,7 @@
     display: inline-block;
     backdrop-filter: blur(5px);
     width: 333px;
+    cursor: pointer;
 
     color: #FFF;
     text-align: center;
