--- a/src/screens/Turist/styles.css
+++ b/src/screens/Turist/styles.css
@@ -10,6 +10,12 @@
     src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
     src: url("../../fonts/Poppins/Poppins-Thin.ttf");
   }
+
+  .containerHeroTurist {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
 .containerTurist {
     position: relative;
     text-align: center;
@@ -18,9 +24,10 @@
 .light {
     border-radius: 100px;
     position: absolute;
-    top: 50%;
-    width: 150px;
-    height: 150px;
+    top: 0;
+    left: -150px;
+    width: 250px;
+    height: 250px;
     background: #62FEE2;
     filter: blur(100px);
     box-shadow: 0px 0px 133.459px 0px #62FEE2, 0px 0px 66.73px 0px #62FEE2, 0px 0px 19.066px 0px #62FEE2, 0px 0px 9.533px 0px #62FEE2;
@@ -29,10 +36,10 @@
 .light2 {
     border-radius: 100px;
     position: absolute;
-    top: 50%;
-    right: 0;
-    width: 150px;
-    height: 150px;
+    top: 300px;
+    right: -150px;
+    width: 250px;
+    height: 250px;
     background: #62FEE2;
     filter: blur(100px);
     box-shadow: 0px 0px 133.459px 0px #62FEE2, 0px 0px 66.73px 0px #62FEE2, 0px 0px 19.066px 0px #62FEE2, 0px 0px 9.533px 0px #62FEE2;
