--- a/src/components/Inputs/styles.css
+++ b/src/components/Inputs/styles.css
@@ -75,15 +75,53 @@
 }
 
 .popup-content {
-  background: white;
+  background: #111;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 300px;
+  height: 500px;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  font-size: 18px;
-  color: #333;
 }
 
+.imgCheck {
+  position: absolute;
+  width: 200px;
+  z-index: 1;
+  animation: float 3s ease-in-out infinite;
+}
+.imgCodigo {
+  width: 300px;
+  filter: invert(1);
+}
+.textPopUp {
+  color: white;
+  font-size: 2em;
+  margin: 0px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;;
+}
+.imgPixPop {
+  width: 200px;
+}
+
+
+
+@keyframes imgCheck {
+  0% {
+      transform: translateY(0);
+  }
+  50% {
+      transform: translateY(-10px);
+  }
+  100% {
+      transform: translateY(0);
+  }
+}
 
 
 
