section turist food

--- a/src/screens/Turist/styles.css
+++ b/src/screens/Turist/styles.css
@@ -15,6 +15,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
 .containerTurist {
     position: relative;
