--- a/src/components/Languaje/styles.css
+++ b/src/components/Languaje/styles.css
@@ -44,6 +44,7 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 10;
     box-sizing: border-box;
+    background: #111111de;
 }
 
 .containerFlag {
