--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -268,53 +268,66 @@
 }
 
 @media (min-width: 360px)  {
-    .titleSectionTwo {
-        width: 70%;
-        font-size: 2.5em;
-        font-family: "Poppins", sans-serif;
-    }
-    .containerPill {
-        border: 1px solid white;
-        font-size: .8em;
-    }
-
-    .pillsRow {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-        overflow: hidden;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        height: 300px;
-    }
+  .titleSectionTwo {
+      width: 70%;
+      font-size: 2.5em;
+      font-family: "Poppins", sans-serif;
+  }
+  .containerSectionTwo {
+    padding: 0px;
+  }
 }
+@media (max-width: 767px) {
+  .titleSectionTwo {
+    font-size: 2rem;
+    width: 90%;
+  }
+
+  .rotated-item {
+    font-size: 0.8rem;
+    padding: 6px 12px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .titleSectionTwo {
+    font-size: 3rem;
+    width: 80%;
+  }
+
+  .rotated-item {
+    font-size: 1rem;
+    padding: 8px 16px;
+  }
+}
+
+@media (min-width: 992px) {
+  .titleSectionTwo {
+    font-size: 4rem;
+    width: 60%;
+  }
+
+  .rotated-item {
+    font-size: 1rem;
+    padding: 8px 16px;
+  }
+}
+
 @media (min-width: 577px)  {
     .titleSectionTwo {
         width: 80%;
         font-size: 4em;
-    }
-    .containerPill {
-        border: 2px solid white;
     }
 }
 @media (min-width: 769px){
     .titleSectionTwo {
         width: 60%;
     }
-    .pillsRow {
-        overflow: hidden;
-        width: 100%;
-        height: 400px;
-    }
 }
 @media (min-width: 992px) {
-    .containerPill {
-        font-size: 1em;
-    }
     .titleSectionTwo {
         font-family: "Poppins", sans-serif;
         font-size: 5em;
 
     }
-}
+} 
