--- a/src/components/buttonTurist/styles.css
+++ b/src/components/buttonTurist/styles.css
@@ -15,8 +15,8 @@
     border-radius: 160px;
     border: 1px solid #FFF;
     background-color: #111;
-    width: 300px;
-    height: 80px;
+    width: 250px;
+    height: 60px;
     cursor: pointer;
 
     color: #FFF;
@@ -31,4 +31,9 @@
 .btnTuristOne:hover {
     border: 1px solid #62FEE2;
     color: #62FEE2;
+}
+
+.btnTuristOne.active {
+    color: #62FEE2;
+    border: 1px solid #62FEE2;
 }
