--- a/src/screens/Turist/TuristSix/styles.css
+++ b/src/screens/Turist/TuristSix/styles.css
@@ -73,3 +73,15 @@
   margin: 5px;
 }
 
+@media (min-width: 360px) {
+  .containerTitleSix {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .titleTuristSix {
+    width: 90%;
+    font-size: 2em;
+  }
+}
