--- a/src/screens/Turist/TuristThree/styles.css
+++ b/src/screens/Turist/TuristThree/styles.css
@@ -33,3 +33,10 @@
     width: 40%;
     line-height: 100.044%;
 }
+
+@media (min-width: 360px) {
+    .titleTuristThree {
+        font-size: 2.5em;
+        width: 90%;
+    }
+}
