--- a/src/screens/Turist/TuristTwo/styles.css
+++ b/src/screens/Turist/TuristTwo/styles.css
@@ -42,3 +42,13 @@
     width: 80%;
     margin: 0px;
 }
+
+@media (min-width: 360px) {
+  .titleTuristTwo {
+    font-size: 2.5em;
+    width: 90%;
+  }
+  .subtitleTuristTwo {
+    font-size: .9em;
+  }
+}
