--- a/src/screens/Turist/TuristSix/styles.css
+++ b/src/screens/Turist/TuristSix/styles.css
@@ -84,4 +84,16 @@
     width: 90%;
     font-size: 2em;
   }
+  .containerFoodSix {
+    height: 500px;
+  }
+  .cardContainer {
+    width: 90%;
+  }
+  .cardContainer > * {
+    margin-right: 0px;
+  }
+  .containerButtonSix {
+    gap: 0px;
+  }
 }
